fix(Pagination): api alignment

--- a/packages/css/pagination.css
+++ b/packages/css/pagination.css
@@ -3,33 +3,41 @@
   --dsc-pagination-ellipsis-width: var(--ds-sizing-12);
   --dsc-pagination-chevron-size: var(--ds-sizing-6);
 
-  display: flex;
-  flex-wrap: wrap;
-  gap: var(--dsc-pagination-gap);
-  list-style: none;
-  margin: 0;
-  padding: 0;
-
-  /* Style ellipsis When not containing interactive element */
-  & > li:not(:has(a, button)) {
-    align-items: center;
+  & > :is(ol, ul) {
     display: flex;
-    justify-content: center;
-    min-width: var(--dsc-pagination-ellipsis-width);
-  }
+    flex-wrap: wrap;
+    gap: var(--dsc-pagination-gap);
+    list-style: none;
+    margin: 0;
+    padding: 0;
 
-  & > li:first-child > ::before,
-  & > li:last-child > ::after {
-    background: currentcolor;
-    content: '';
-    height: var(--dsc-pagination-chevron-size);
-    mask: center/contain no-repeat
-      url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24'%3E%3Cpath d='M9.47 5.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 0 1 0 1.06l-5.5 5.5a.75.75 0 1 1-1.06-1.06L14.44 12 9.47 7.03a.75.75 0 0 1 0-1.06'/%3E%3C/svg%3E");
-    width: var(--dsc-pagination-chevron-size);
-  }
+    & > li:first-child > ::before,
+    & > li:last-child > ::after {
+      content: '';
+      background: currentcolor;
+      height: var(--dsc-pagination-chevron-size);
+      mask: center/contain no-repeat
+        url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 24 24'%3E%3Cpath d='M9.47 5.97a.75.75 0 0 1 1.06 0l5.5 5.5a.75.75 0 0 1 0 1.06l-5.5 5.5a.75.75 0 1 1-1.06-1.06L14.44 12 9.47 7.03a.75.75 0 0 1 0-1.06'/%3E%3C/svg%3E");
+      width: var(--dsc-pagination-chevron-size);
+    }
 
-  & > li:first-child > ::before {
-    rotate: 180deg;
+    & > li:first-child > ::before {
+      rotate: 180deg;
+    }
+
+    & > li:not(:first-child, :last-child) > :is(a, button) {
+      --dsc-button-padding-inline: var(--dsc-button-padding-block); /* Makes pagination buttons square unless content is more than characters */
+
+      /* Style as non-interactive ellipsis when empty */
+      &:empty {
+        pointer-events: none;
+        color: inherit;
+
+        &::before {
+          content: '\2026'; /* ellipsis */
+        }
+      }
+    }
   }
 
   &[data-size='sm'] {
